Fix overlapping fullscreen icon

--- a/src/components/viz-pane/index.css
+++ b/src/components/viz-pane/index.css
@@ -10,6 +10,12 @@
   display: none;
 }
 
+.debug-pane {
+  width: 100%;
+  background: white;
+  padding-bottom: 20px;
+}
+
 .debug-pane-header {
   position: relative;
   width: 100%;
@@ -54,7 +60,3 @@
   color: #000;
 }
 
-.debug-pane {
-  width: 100%;
-  padding-bottom: 20px;
-}
